src/components/project/Project.css
.project {
  --backgroundcolor: #15023a;
  background-color: #fff;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.project h1 {
  font-size: 3em;
  font-weight: 1;
}
.project ul {
  margin: 10px;
  padding: 0;
  list-style: none;
  display: flex;
}
.project-container {
  width: 70%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.item {
  --backgroundcolor: #15023a;
  width: 220px;
  height: 150px;
  border-radius: 20px;
  border: 1px solid rgb(240, 239, 239);
  margin: 10px 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #fff;
  position: relative;
  transition: all .5s ease;
  cursor: pointer;  
}
.item h3 {
  position: absolute;
  font-size: 20px;
  text-align: center;
}
.item a,img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 20px;
  z-index: 1;
}
.item:hover {
  background-color: var(--backgroundcolor);
}
.item:hover img {
  opacity: 0.2;
  z-index: 0;
}
@media (max-width: 768px) {
  .project h1 {
    font-size: 20px;
  }
  .project ul {
    margin: 10px 0;
    flex-wrap: wrap;
    justify-content: center;
  }
  .project-container {
    width: 100%;
  }
  .item {
    width: 130px;
    height: 100px;
  }
}

